<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeActivity"
    android:background="@drawable/landing_palette">

    <LinearLayout
        android:id="@+id/welcome"
        android:layout_above="@id/choose_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="24dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@mipmap/app_hello"
            android:background="@drawable/background_main"
            android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/choose_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_message"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/background_main"/>

        <Button
            android:id="@+id/to_login"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/button_tertiary"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorButton"
            android:textSize="16sp"
            android:fontFamily="@font/quick_sand_bold"
            tools:ignore="UnusedAttribute"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/to_register"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/button_secondary"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/quick_sand_bold"
            tools:ignore="UnusedAttribute"/>
    </LinearLayout>
</RelativeLayout>