<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:src="@drawable/icon_locked"
                android:layout_gravity="start"
                android:contentDescription="@string/forgot_password"/>

            <TextView
                android:id="@+id/script_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="24dp"
                android:text="@string/script_reset"
                android:textColor="@color/colorGreyDark"
                android:textAlignment="textStart"
                android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_email_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_reset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_email"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:theme="@style/AppTheme"
                    android:textColor="@android:color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_reset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="24dp"
                android:gravity="center"
                android:text="@string/reset_button"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:fontFamily="@font/quick_sand_bold"
                android:background="@drawable/button_primary"
                tools:targetApi="o"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>