<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:theme="@style/AppTheme">

    <ScrollView
        android:id="@+id/scroll_view_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/scrolling_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/just_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="4dp"
                android:layout_marginHorizontal="24dp"
                android:text="@string/register"
                android:textSize="24sp"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:fontFamily="@font/quick_sand_bold"/>

            <TextView
                android:id="@+id/register_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/just_register"
                android:layout_marginHorizontal="24dp"
                android:text="@string/register_line"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textColor="@color/colorGreyDark"/>

            <LinearLayout
                android:id="@+id/field_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_tag"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                tools:targetApi="o">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/check_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_slave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/input_email"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:theme="@style/AppTheme"
                        android:textColor="@android:color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/check_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorGreyDark"
                    android:layout_marginVertical="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password_slave"
                        android:hint="@string/input_password"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:theme="@style/AppTheme"
                        android:textColor="@android:color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/check_retype_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorGreyDark"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="32dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/retype_slave"
                        android:hint="@string/confirm_password"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:theme="@style/AppTheme"
                        android:textColor="@android:color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/field_register"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/next"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:fontFamily="@font/quick_sand_bold"
                android:background="@drawable/button_primary"
                tools:targetApi="o"/>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/button_next"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:background="@color/colorButton"/>

            <Button
                android:id="@+id/advice_login"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_below="@id/view"
                android:paddingHorizontal="8dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="24dp"
                android:layout_centerHorizontal="true"
                android:text="@string/direct_login"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textColor="@color/colorButton"
                android:background="?attr/selectableItemBackground"
                android:foreground="@android:color/transparent"
                tools:targetApi="o"
                tools:ignore="UnusedAttribute"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>